tests/invalid/depth06.h
#include "depth07.h"
